--- a/Diplomado_Web_MVC_Consultorio_Medico/Views/Shared/_Layout.cshtml
+++ b/Diplomado_Web_MVC_Consultorio_Medico/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/manageUser.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
